--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@firebase/app": "^0.7.0",
+    "@firebase/firestore": "^3.0.2",
     "core-js": "^3.6.5",
+    "firebase": "^9.0.2",
     "uid": "^2.0.0",
     "vue": "^3.0.11",
     "vue-router": "^4.0.0-0",
